<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/txtSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_ex_city"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/btn_title_search"
                    android:background="@color/buttons_color"
                    android:textColor="#FFFFFF"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/standardColor">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_current"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/lblCurrent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hnt_current"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/standardColor">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_min"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/lblMin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hnt_min"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/standardColor">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_max"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/lblMax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hnt_max"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:background="@color/standardColor">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lbl_weather"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/lblDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hnt_weather"
                        android:textSize="18sp"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgWeather"
                    android:layout_width="match_parent"
                    android:layout_height="206dp"

                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_sun" />

                <Button
                    android:id="@+id/btnGo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_title_mape"
                    android:background="@color/buttons_color"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>